--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <div class="header">
+      <div class="left">
       <div class="logo">
         LOGO
-      </div>
+      </div></div>
       <ul class="links">
         <li><a href="google.com">link-one</a></li>
         <li><a href="google.com">link-two</a></li>
@@ -20,7 +21,9 @@
       <button class="notifications">
         1 new notification
       </button>
+      <div class="right">
       <div class="profile-image"></div>
     </div>
+  </div>
   </body>
 </html>
